added experince block

--- a/style.css
+++ b/style.css
@@ -44,10 +44,11 @@ body {
 #photo {
   width: 20%;
   height: 200px;
-  margin: 2%;
-  background-image: url("profile.webp");
+  margin: 4%;
+  background-image: url("profile.JPG");
   background-size: cover;
   border-radius: 50%;
+  box-shadow: 5px 5px 10px #007ced;
 }
 
 #intro p {
@@ -93,7 +94,12 @@ body {
   align-items: center;
 }
 
-#project {
+#project h4 {
+  margin-block-end: 0%;
+}
+
+#project h5 {
+  margin-block-start: 0%;
 }
 
 .boxshadow {
@@ -109,9 +115,12 @@ body {
   display: flex;
   justify-content: space-evenly;
 }
+#skillrow p {
+  margin-block-end: 1%;
+}
 
 progress {
-  width: 40%;
+  width: 80%;
 }
 
 progress::-webkit-progress-value {
